2014-08-24  17  Initial implementation of filtering Bookmarks by Tags.
2014-08-25  19  Implemented RA_SaveCheckState and passing associated TIDs from TagManager::
                SetBookmarkTags to MainWindow to check them.
2014-08-26  22  Tag filtering done and working without bugs, RA_NoRefreshView implemented,
                status labels working for tags now (but not for search filters, yet).
2014-09-03  15  Removed Toolbar context menu, fixed tagging bug and tag selection saving.
2014-09-04  13  Added Edit action and made Preview/Open/Edit/With actions ready to implement.
2014-09-07  13  Added BookmarkViewDialog (as default double-click action), FiveStarRatingWidget.
2014-09-08  19  Fixed BMViewDlg bugs, initial implementation of FileViewHandler's/FileViewerWidget
                to preview an HTML file.
2014-09-10  19  Created simple Image and Text preview handlers, BMViewDlg files context menu.
2014-09-11  19  Preview enhancements. Support sandboxed file opening everywhere.
2014-09-13  18  Decision on ExecuteShellEx opening (we don't do it), delete sandbox on start-up
2014-09-15  22  Fixed both htm and mht file vieweing, HTMLViewer has frame, Initial OpenWithDialog
2014-09-16  25  OpenWidthDlg: list apps with beautiful ItemDelegate, filtering and getting EXE info
2014-09-17  25  App list browsing, adding systemApps to database, bugfixes.
2014-09-18  27  Coding improvements
2014-09-21  32  Default system application and Preferred application implemented, OpenWithDialog 
                has defapp & sandboxing support, OpenWith works initially.
2014-09-22  30  Associated applications and sorted Open With menu implemented.
2014-09-23  30  OpenWithDlg AppList sorting, Rename and unassociate implemented, bugfixes.
2014-09-24  27  OpenWithDlg AppList Remove function, bugfixes, BMEditDialog Preview
2014-09-28  41  Got hands dirty to unify the file archive management.
2014-09-29  41  File management unification more tries and almost complete.