@@ -37,3 +37,4 @@
 2014-09-24  27  OpenWithDlg AppList Remove function, bugfixes, BMEditDialog Preview
 2014-09-28  41  Got hands dirty to unify the file archive management.
 2014-09-29  41  File management unification more tries and almost complete.
+2014-10-01  34  File archive management unification done.
